# tasks-rs

./: .gitignore  Cargo.toml  Makefile  TODO.md  gen-cert.sh  task.task
_tasks/src/: lib.rs  middleware.rs  middleware_ext.rs  pipe.rs  producer_ext.rs  utils.rs
_tasks/src/sync/: either.rs  mod.rs  pool.rs  task.rs  task_ext.rs
band/: Cargo.toml
band/src/: band.rs  error.rs  impls.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs
service/: Cargo.toml
service/src/: and.rs  and_then.rs  and_then_reject.rs  boxed.rs  either.rs  err_into.rs  flatten.rs  generic.rs  lib.rs  macros.rs  map.rs  map_err.rs  middleware.rs  or.rs  or_else.rs  rejection.rs  service.rs  service_ext.rs  then.rs  unify.rs  unpack.rs  util.rs  vec.rs
tasks/: Cargo.toml
tasks-assets/: Cargo.toml
tasks-assets/examples/: asset-simple.rs  assets.rs
tasks-assets/src/: assets.rs  cache.rs  error.rs  extensions.rs  lib.rs  mount.rs  request.rs  response.rs  transform.rs
tasks-assets/src/filters/: any.rs  mod.rs
tasks-assets/src/sources/: fs.rs
tasks-core/: Cargo.toml
tasks-core/src/: and.rs  generic.rs  lib.rs  macros.rs  map.rs  middleware.rs  middleware_ext.rs  or.rs  task.rs  task_ext.rs  util.rs
tasks-core/src/_filter/: and.rs  and_then.rs  filter.rs
tasks-core/src/filter/: and.rs  any.rs  filter.rs  filter_ext.rs  generic.rs  map.rs  mod.rs
tasks-core/src/filters2/: and_then.rs  map.rs  mod.rs  unroll.rs  untuple.rs
tasks-http/: Cargo.toml  LICENSE
tasks-http/examples/: and.rs  compress.rs  filter.rs  handlers.rs  mount.rs  simple.rs  tls.rs  uds.rs  ws.rs
tasks-http/examples/tls/: cert.pem  key.rsa
tasks-http/src/: compress.rs  error.rs  lib.rs  modifiers.rs  mount.rs  multipart.rs  reply.rs  request.rs  response.rs  server.rs  service.rs  transport.rs  ws.rs
tasks-http/src/filters/: any.rs  body.rs  ext.rs  header.rs  method.rs  mod.rs  mount.rs  query.rs
tasks-http/src/handlers/: dir.rs  file.rs  mod.rs
tasks-vinyl/: Cargo.toml
tasks-vinyl/examples/: main.rs
tasks-vinyl/src/: builder.rs  dest.rs  error.rs  file.rs  lib.rs  path.rs  runtime.rs  src.rs  traits.rs  util.rs  vfs_ext.rs
tasks-vinyl/src/filters/: mime.rs  mod.rs  path.rs
tasks-vinyl/src/runtime/: mod.rs  tokio_rt.rs
tasks-vinyl/src/std_async/: fs.rs  mod.rs
tasks-vinyl/src/transforms/: mod.rs  rename.rs
tasks/src/: _boxed.rs  _map_rejection.rs  _stack.rs  and.rs  and_then.rs  and_then_reject.rs  blocking.rs  boxed.rs  chain.rs  either.rs  end.rs  error.rs  filter.rs  filter_pipe.rs  generic.rs  lib.rs  macros.rs  map.rs  map_err.rs  middleware.rs  middleware_ext.rs  or.rs  pass.rs  persist.rs  pipe.rs  producer.rs  stack.rs  task.rs  task_ext.rs  task_state.rs  task_stream.rs  unify.rs  unify2.rs  unroll.rs  utils.rs
tasks/src/_filter/: filter_ext.rs  mod.rs
tasks/src/sync/: either.rs  pipe.rs  pool.rs  task.rs  task_ext.rs
willow/TEST_OUTPUT/TEST_OUTPUT/: Cargo.toml
willow/TEST_OUTPUT/TEST_OUTPUT/src/: error.rs
willow/TEST_OUTPUT/src/: lib.rs  source.rs
willow/src/: error.rs  lib.rs  source.rs  target.rs
