[package]
name = "runtime"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = [ "rt", "time" ], optional = true }
smol = { version = "1", optional = true }
async-std = { version = "1", optional = true, features = [ "blocking", "unstable" ] }

[features]
default = [ "time" ]
time = [ ]