[package]
name = "service"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"


[dependencies]
pin-project = "1"
futures-core = { version = "0.3", default-features = false }


[features]
default = [ "alloc" ]
# default = ["std"]
std = ["alloc", "futures-core/std"  ]
alloc = []