[package]
name = "tasks-assets"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
tasks-vinyl = { path = "../tasks-vinyl" }
futures-util = "0.3"
futures-io = "0.3"
serde_json = "1"
pin-project = "0.4"
bytes = "0.5"
async-trait = "0.1"
mime = "0.3"
serde = { version = "1", features = [ "derive" ] }
sha2 = "0.9"
async-mutex = "1"

[dev-dependencies]
tokio = { version = "0.2", features = [ "full" ]}