[package]
name = "tasks-http"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
# tokio = { version = "0.2", features = ["blocking", "fs", "stream", "sync", "time"] }
tokio = { version = "0.2", features = [ "blocking", "stream" ] }
bytes = "0.5"
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
headers = "0.3"
log = "0.4"
pin-project = "0.4"
futures-core = "0.3"
tokio-rustls = { version = "0.12.2", optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
url = "2"
modifier = "0.1"
mime = "0.3"
mime_guess = "2.0.0"
multipart = { version = "0.16", default-features = false, features = ["server"], optional = true }
async-compression = { version = "0.2",  features = [ "stream", "deflate", "gzip", "brotli" ], optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }
serde_json = { version = "1", optional = true }
tokio-tungstenite = { version = "0.10", optional = true }
serde_qs = { version = "0.5", optional = true }
urlencoding = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
pretty_env_logger = "0.4"


[features]
default = [ "full" ]
full = [
    "tls",
    "compress",
    "uds",
    "ws",
    "json",
    "qs",
    "statics"
]
tls = [ "tokio-rustls" ]
compress = [ "async-compression" ]
uds = [ "tokio/uds" ]
json = [ "serde", "serde_json" ]
ws = [ "tokio-tungstenite" ]
qs = [ "serde", "serde_qs" ]
statics = [ "tokio/fs", "urlencoding" ]