[package]
name = "tasks-vinyl"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", features = [ "io" ] }
futures-io = "0.3"
bytes = "0.5"
tasks = {  path = "../tasks" }
failure = "0.1"
pin-project = "0.4"
vfs-async = { git = "https://github.com/kildevaeld/vfs-rs" }
tokio = { version = "0.2", features = [ "sync" ]}
mime = "0.3"
mime_guess = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros" ]}

[features]
default = [ ]


[[example]]
path = "examples/main.rs"
name = "vinyl"