[package]
name = "tasks"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
rayon = { version = "1.2", optional = true }
num_cpus = { version = "1", optional = true }
pin-project = "0.4"

[dev-dependencies]
futures-executor-preview = "=0.3.0-alpha.19"

[features]
default = [ ]
sync = ["rayon", "num_cpus"]