[package]
name = "tasks"
version = "0.2.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
pin-project = "0.4"
rayon = { version = "1.3", optional = true }
num_cpus = { version = "1", optional = true }


[dev-dependencies]
futures-executor-preview = "=0.3.0-alpha.19"
async-stream = "0.2"

[features]
default = [  ]
sync = ["rayon", "num_cpus"]