[package]
name = "willow"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
mime = "0.3"
tasks-vinyl = { path = "../tasks-vinyl" }
tasks = { path = "../tasks" }
vfs-async = { git = "https://github.com/kildevaeld/vfs-rs" }
mime_guess = "2"


[dev-dependencies]
tokio = { version = "0.2", features = [ "macros" ]}
